src/test/run-pass/assert-ne-trailing-comma.rs
fn main() {
    assert_ne!(1, 2,);
}
