src/test/compile-fail/extfmt-no-args.rs
// error-pattern:fmt! needs at least 1 arguments

fn main() { fmt!(); }
